--- a/3. create_embeddings.ipynb
+++ b/3. create_embeddings.ipynb
@@ -1,25 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "D6WRlcEPvll9"
+   },
+   "source": [
+    "# Импорт библиотек"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 10,
-     "status": "ok",
-     "timestamp": 1679403110639,
-     "user": {
-      "displayName": "Гоша Сидоркин",
-      "userId": "09429149278087224251"
-     },
-     "user_tz": -240
-    },
-    "id": "5RhV20Oi-eGP",
-    "outputId": "ccb367a9-c61b-4738-fcf8-a68fc0c4f333"
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -31,16 +23,13 @@
    ],
    "source": [
     "%cd /content/drive/MyDrive/MTS ML Cup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
-    "id": "D6WRlcEPvll9"
-   },
-   "source": [
-    "# Импорт библиотек"
-   ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
