--- a/6. gender_prediction_stacking.ipynb
+++ b/6. gender_prediction_stacking.ipynb
@@ -97,47 +97,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 6869,
-     "status": "ok",
-     "timestamp": 1680277937663,
-     "user": {
-      "displayName": "Гоша Сидоркин",
-      "userId": "09429149278087224251"
-     },
-     "user_tz": -240
-    },
-    "id": "8_yyY2j0hc3H",
-    "outputId": "f81e8a96-e72c-43de-ae16-a17ea4648c67"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-      "Collecting implicit\n",
-      "  Downloading implicit-0.6.2-cp39-cp39-manylinux2014_x86_64.whl (18.6 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.6/18.6 MB\u001b[0m \u001b[31m35.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from implicit) (1.22.4)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.9/dist-packages (from implicit) (4.65.0)\n",
-      "Requirement already satisfied: scipy>=0.16 in /usr/local/lib/python3.9/dist-packages (from implicit) (1.10.1)\n",
-      "Installing collected packages: implicit\n",
-      "Successfully installed implicit-0.6.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install implicit"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "pycharm": {
@@ -736,32 +695,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 4,
-     "status": "ok",
-     "timestamp": 1680296145213,
-     "user": {
-      "displayName": "Гоша Сидоркин",
-      "userId": "09429149278087224251"
-     },
-     "user_tz": -240
-    },
-    "id": "v2alu5nZinzV"
-   },
-   "outputs": [],
-   "source": [
-    "df_cat = df.copy()\n",
-    "\n",
-    "# кодирование категориальных переменных дает прирост в метриках для lgbm\n",
-    "df['cpe_type_cd'] = df['cpe_type_cd'].cat.codes\n",
-    "df['cpe_model_os_type'] = df['cpe_model_os_type'].cat.codes\n",
-    "df['cpe_manufacturer_name'] = df['cpe_manufacturer_name'].cat.codes"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {
     "executionInfo": {
@@ -894,7 +827,7 @@
     }
    ],
    "source": [
-    "df_train_cat = targets.merge(df_cat, how='inner', on=['user_id']) \\\n",
+    "df_train_cat = targets.merge(df, how='inner', on=['user_id']) \\\n",
     "                      .merge(url_emb, how='inner', on='user_id') \\\n",
     "                      .merge(city_emb, how='inner', on=['user_id']) \\\n",
     "                      .merge(reg_emb, how='inner', on=['user_id']) \\\n",
