--- a/1. EDA.ipynb
+++ b/1. EDA.ipynb
@@ -29,6 +29,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Описание задачи"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "https://ods.ai/competitions/mtsmlcup\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "e03e3da2",
