--- a/0. Data_preparing.ipynb
+++ b/0. Data_preparing.ipynb
@@ -684,7 +684,7 @@
    "source": [
     "\"\"\"\n",
     "Аггрегируем датафрейм по user_id и генерируем новые признаки. Итоговый датафрейм содержит признаки:\n",
-    "- act_days - кол-во дат активности пользователя\n",
+    "- act_days - кол-во дней, в которые пользователь совершил визит пользователя\n",
     "- request_cnt - кол-во запросов пользователя\n",
     "- avg_req_per_day - среднее кол-во запросов пользователя\n",
     "- period_days - кол-во дней между первым и последним визитом пользователя\n",
@@ -961,7 +961,7 @@
    "source": [
     "\"\"\"\n",
     "Аггрегируем датафрейм по user_id и генерируем новые признаки. Итоговый датафрейм содержит признаки:\n",
-    "- url_host_cnt - кол-во уникальных регионов, из которых был совершен визит\n",
+    "- url_host_cnt - кол-во уникальных ссылок, с которых был совершен визит\n",
     "\"\"\"\n",
     "df_url = get_user_url_cnt(df)\n",
     "df_url.head(3)"
