--- a/0. Data_preparing.ipynb
+++ b/0. Data_preparing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "443db361",
+   "id": "6b803eaa",
    "metadata": {},
    "source": [
     "# Описание задачи"
@@ -50,15 +50,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea19b058",
+   "id": "f71c8b06",
    "metadata": {},
    "source": [
-    "## О соревновании"
+    "**В данном jupyter-ноутбуке мы рассмотрим и предобработаем 1 из 10 файлов с данными. После чего аггрегируем отдельно каждый файл в цикле и соединим в 1 датафрейм**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b1e00581",
+   "id": "eb708a8a",
+   "metadata": {},
+   "source": [
+    "## О соревновании и данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66405499",
    "metadata": {},
    "source": [
     "https://ods.ai/competitions/mtsmlcup\n",
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb4088a8",
+   "id": "b01ba93e",
    "metadata": {},
    "source": [
     "## Структура проекта"
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "726b2d33",
+   "id": "d00c5716",
    "metadata": {},
    "source": [
     "Данная работа была разделена на несколько jupyter ноутбуков:\n",
@@ -122,14 +130,6 @@
    "metadata": {},
    "source": [
     "# Data preparing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "467e196a",
-   "metadata": {},
-   "source": [
-    "В данном jupyter-ноутбуке мы рассмотрим и предобработаем 1 из 10 файлов с данными. После чего аггрегируем отдельно каждый файл в цикле и соединим в 1 датафрейм"
    ]
   },
   {
@@ -1019,10 +1019,15 @@
     "        temp_df = replace_model_mistakes(temp_df)\n",
     "\n",
     "        # получаем аггрегированные данные\n",
+    "        # кол-во визитов пользователя в разное время суток\n",
     "        data_part_day = get_data_part_day(temp_df)\n",
+    "        # кол-во активных дней и среднее кол-во запросов в сутки\n",
     "        data_days = get_data_days(temp_df)\n",
+    "        # данные об устройстве\n",
     "        data_user_model = get_user_model_price(temp_df)\n",
+    "        # кол-во регионов и городов\n",
     "        data_city_cnt = get_user_city_cnt(temp_df)\n",
+    "        # кол-во уникальных url\n",
     "        data_url_cnt = get_user_url_cnt(temp_df)\n",
     "\n",
     "        # объединяем все в один датафрейм\n",
@@ -1358,6 +1363,7 @@
    },
    "outputs": [],
    "source": [
+    "# сохраняем итоговый аггрегированный датафрейм\n",
     "df_final.to_csv('../data_agg/df_final.csv', index=False)"
    ]
   }
