добавлено описание задачи

--- a/1. EDA.ipynb
+++ b/1. EDA.ipynb
@@ -10,12 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6c414076",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gosha/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
     "import warnings\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -37,10 +45,19 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "**В данном jypyter-ноутбуке мы проведем исследовательский анализ ранее сгруппированных нами данных и таргетов**"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "id": "ceca615d",
    "metadata": {},
    "source": [
-    "## О соревновании"
+    "## О соревновании и данных"
    ]
   },
   {
@@ -112,9 +129,7 @@
     "3. create_embeddings.ipynb - создание эмбеддингов для дальнейшего их использования в качестве фич\n",
     "4. baseline_embeddings.ipynb - бейзлан модели с эмбеддингами\n",
     "5. model_tuning.ipynb - тюнинг наиболее перспективных моделей\n",
-    "6. gender_prediction_stacking.ipynb - стекинг моделей для предсказания пола\n",
-    "\n",
-    "**В данном jypyter-ноутбуке мы проведем исследовательский анализ ранее сгруппированных нами данных и таргетов**"
+    "6. gender_prediction_stacking.ipynb - стекинг моделей для предсказания пола"
    ]
   },
   {
